--- a/css/style.css
+++ b/css/style.css
@@ -7,9 +7,24 @@
     background-color: rgba(230, 244, 255, 0.664);
 }
 
+.img {
+    display: block;
+    width: 70%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .img2 {
+    display: block;
+    width: 50%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
 td{
     font-weight: bold;
 }
+
 .margemTb{
     margin-left: auto;
 }
