--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,13 @@
     margin-right: auto;
   }
 
+  .img3 {
+    display: block;
+    width: 30%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
 td{
     font-weight: bold;
 }
