--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,12 @@
     margin-right: auto;
   }
 
+  .img4 {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
 td{
     font-weight: bold;
 }
